--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -13,6 +13,10 @@ body {
         @apply px-4 py-2 rounded-md shadow-md;
         @apply bg-[#12b488] text-white;
     }
+
+    .card {
+        @apply p-3 rounded-md bg-white shadow-md h-full;
+    }
 }
 
 
